# blocktimer

./: .gitignore  .gitmodules  Makefile  README.md  addr.c  block.conf  blocktimer.h  compile_flags.txt  fetch_addresses.c  handle_errors.c  main.c  meson.build  meson_options.txt  out  parse_config.c  waitforwakeup.c
src/: addr.c  blocktimer.h  fetch_addresses.c  handle_errors.c  main.c  meson.build  parse_config.c
systemd/: blocktimer.service
